<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="com.cosmo.arquitecturamvpbase.views.taller.ContactActivity">

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/contactcreate_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="?android:attr/progressBarStyleSmall">
    </android.support.v4.widget.ContentLoadingProgressBar>

    <EditText
        android:id="@+id/contactcreate_name_editex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Nombre"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:id="@+id/contactcreate_username_edittex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Usernombre"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:id="@+id/contactcreate_number_edittex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Número"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <EditText
        android:id="@+id/contactcreate_type_edittex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Tipo"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <LinearLayout
        android:id="@+id/contactcreate_separador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/contactcreate_cordinates_latitud"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:hint="Latitud"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"/>

        <EditText
            android:id="@+id/contactcreate_cordinates_altitud"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:hint="Altitud"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/contactcreate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crear contacto"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimaryDark"/>

</LinearLayout>
